# fpatch

./: Cargo.toml
scripts/: chmod.sh
src/: cli.rs  configs.rs  daemon.rs  dirs.rs  extensions.rs  fuse.rs  hash.rs  main.rs  mount.rs  pipeback.rs
