[package]
name = "fpatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fuser = "0.14"
libc = "0.2"
log = "0.4"
md5 = "0.7"
once_cell = "1.19"
rustix = {  version = "0.38", features = ["all-apis"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
