[package]
name = "fpatch"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fuser = "0.14"
libc = "0.2"
log = "0.4"
md5 = "0.7"
notify = "6.1"
once_cell = "1.19"
rustix = {  version = "0.38", features = ["all-apis"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
